<resources>
    <string name="app_name">Algoprog</string>
    <!-- Menu strings-->
    <string name="FAQ">О курсе</string>
    <string name="news">Новости</string>
    <string name="Level_1">Уровень 1</string>
    <string name="Level_2">Уровень 2</string>
    <string name="Level_3">Уровень 3</string>
    <string name="Level_4">Уровень 4</string>
    <string name="Level_5">Уровень 5</string>
    <string name="Level_6">Уровень 6</string>
    <string name="Level_7">Уровень 7</string>
    <string name="Level_8">Уровень 8</string>
    <string name="Level_9">Уровень 9</string>
    <string name="Level_10">Уровень 10</string>
    <string name="olymps">Задачи из олимпиад</string>
    <string name="enter_in_Menu">Войти</string>
    <string name="exit">Выйти</string>
    <string name="change_user">Сменить пользователя</string>
    <!--Menu names-->
    <!--Login screen strings-->
    <string name="enterText">Войти</string>
    <string name="usernameInEnter">ИМЯ ПОЛЬЗОВАТЕЛЯ</string>
    <string name="passwordInEnter">ПАРОЛЬ</string>
    <string name="loginInEnterScreen">Войти</string>
    <string name="rememberMe">Запомнить меня</string>
    <!--Login fragment strings-->

    <!--Starter fragment strings-->
    <string name="big_header_in_start">Алгоритмическое программирование</string>
    <string name="small_header_in_start">Очно-заочный курс Петра Калинина</string>
    <string name="about_algoprog_header">Что это за курс?</string>
    <string name="b_in_start_pupil">Я школьник</string>
    <string name="b_in_start_student">Я студент или выпускник</string>
    <string name="hello_i_am_pupil">В этом курсе вы научитесь программировать, писать сложные алгоритмы и решать олимпиадные задачи. Вы подготовитесь к олимпиадам по информатике, да и задачи части C ЕГЭ вам покажутся проще. В дальнейшем полученные тут знания и умения вам помогут как в вузе, так и в любой деятельности, хоть как-то связанной с программированием.
        \n\nЗаниматься можно как совсем начинающим, так и тем, кто уже что-то умеет. Вы можете заниматься заочно; также для нижегородцев существуют очные занятия. Занятия для нижегородских школьников бесплатные, для школьников младше 9 класса тоже, для остальных </string>
    <string name="hello_i_am_student">В этом курсе вы научитесь программировать, писать сложные алгоритмы, понимать и использовать различные структуры данных. Полученные тут знания и умения помогут вам в вузе, пригодятся, если вы соберетесь работать в любой крупной IT-компании, да и вообще будут полезны в любой деятельности, хоть как-то связанной с программированием.
        \n\nЗаниматься можно как совсем начинающим, так и тем, кто уже что-то умеет. Занятия проходят заочно. Занятия </string>
    <string name="how_it_works">Как это работает?</string>
    <string name="about_levels">
Темы разбиты по уровням по возрастанию сложности: от основ синтаксиса до продвинутых алгоритмов. По большинству тем есть теоретические материалы (статьи, советы, видеолекции) и задачи.</string>
    <string name="about_submit">Вы изучаете теорию и решаете задачи на своем любимом языке программирования. Задачи отправляете на сайт, и они автоматически проверяются.</string>
    <string name="about_results">
Через минуту вы узнаете, правильное решение у вас или неправильное. Если правильное — двигаетесь дальше; если неправильное, думаете, как это исправить.
</string>
    <string name="about_comments">Все неправильные решения я вижу и могу вам подсказать, в чем у вас ошибка. Все правильные решения я тоже вижу и просматриваю глазами — насколько оптимально они написаны.</string>
    <string name="about_ac">Если решение написано достаточно хорошо, я его засчитываю. Могу еще написать небольшие комментарии по вашему коду.</string>
    <string name="about_ig">Если решение написано не очень хорошо, я его не засчитываю — «игнорирую». К игнорированным решениям я пишу комментарий, и вам надо будет переделать решение.</string>
    <string name="about_best">Когда ваше решение зачтено, вы получаете доступ к «хорошим решениям», чтобы видеть, как эту задачу решали другие ученики.</string>
    <string name="i_am_interested_in_your_religion">Как начать заниматься?</string>
    <string name="payment">" платные"</string>
    <string name="full_faq">"Подробная информация про курс "</string>
    <string name="full_faq_for_pupils">"FAQ для школьников"</string>
    <string name="our_bible">на сайте и напишите мне (контактная информация в разделе</string>
    <string name="about_course"> О курсе</string>
    <string name="req">Зарегистрируйтесь </string>
    <!--Starter fragment strings-->

    <!-- Algoprog menu items -->
    <string name="about_course_url">https://algoprog.ru/material/0</string>
    <string name="level_1_url">https://algoprog.ru/material/1</string>
    <string name="level_2_url">https://algoprog.ru/material/2</string>
    <string name="level_3_url">https://algoprog.ru/material/3</string>
    <string name="level_4_url">https://algoprog.ru/material/4</string>
    <string name="level_5_url">https://algoprog.ru/material/5</string>
    <string name="level_6_url">https://algoprog.ru/material/6</string>
    <string name="level_7_url">https://algoprog.ru/material/7</string>
    <string name="level_8_url">https://algoprog.ru/material/8</string>
    <string name="level_9_url">https://algoprog.ru/material/9</string>
    <string name="level_10_url">https://algoprog.ru/material/10</string>
    <string name="news_url">https://algoprog.ru/news</string>
    <string name="text_view_in_navigation_drawer">Algoprog</string>
    <!-- Algoprog menu items -->

    <!-- Shared Preferences keys -->
    <string name="cookies">cookies</string>
    <string name="noCookies">noCookies</string>
    <string name="oldCookies">oldCookies</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="app_preferences"> justSomeData</string>
    <string name="user_id">userId</string>
    <!-- Shared Preferences keys -->

    <!-- BestSubmits menu items -->
    <string name="header_in_best_submits">Хорошие решения</string>
    <!-- BestSubmits menu items -->

    <!--Task fragment strings-->
    <string name="submit_result">Результат</string>
    <string name="submit_time">Время</string>
    <string name="submit_language">Язык</string>
    <string name="submit_tests">Тесты</string>
    <string name="submit_code">Исходный код</string>
    <string name="informatics">"Задача на informatics"</string>
    <!--Task fragment strings-->
    <!--No need in translation strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <!--No need in translation strings-->
    <!--Olymps screen strings-->
    <string name="olymps_reg">Региональные олимпиады</string>
    <string name="olymps_roi">Всероссийские олимпиады</string>
    <!--Olymps screen strings-->

    <!-- TODO: Remove or change this placeholder text -->
</resources>
