<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/paddingHorizontal"
        android:layout_marginEnd="@dimen/paddingHorizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/big_header_in_start"
            android:textColor="@color/colorForMainText"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/small_header_in_start"
            android:textSize="@dimen/font_huge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingVertical"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_algoprog_header"
            android:textColor="@color/colorForMainText"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_i_am_pupil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/b_in_start_pupil"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_i_am_student"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/paddingVertical"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/b_in_start_student"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hello_i_am_pupil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/hello_i_am_pupil"
            android:textAllCaps="false"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large"
            android:typeface="sans" />

        <TextView
            android:id="@+id/tv_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/how_it_works"
            android:textColor="@color/colorForMainText"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cropToPadding="false"
            app:srcCompat="@drawable/about_1_levels_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_levels"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/about_2_submit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_submit"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/about_3_results" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_results"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/about_4_comments" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_comments"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/about_5_ac" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_ac"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/about_6_ig" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_ig"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/about_7_best" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/about_best"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingBottom"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/i_am_interested_in_your_religion"
            android:textColor="@color/colorForMainText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_how_to_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingMultiplier="1.1"
            android:textColor="@color/colorForMainText"
            android:textSize="@dimen/font_large" />

    </LinearLayout>

</ScrollView>