<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/mtrl_card_spacing"
    android:layout_marginTop="@dimen/mtrl_card_spacing"
    android:layout_marginRight="@dimen/mtrl_card_spacing"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:fontFamily="sans-serif"
        android:paddingStart="@dimen/paddingHorizontal"
        android:paddingEnd="@dimen/paddingHorizontal"
        android:text="@string/olymps"
        android:textColor="@color/colorForMainText"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1.5dp">

        <TextView
            android:id="@+id/tw_olymp_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/paddingVertical"
            android:paddingBottom="@dimen/paddingVertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/olymps_reg"
            android:textAllCaps="false"
            android:textColor="@color/colorForMainText"
            android:textSize="20sp" />
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1.5dp">

        <TextView
            android:id="@+id/tw_olymp_roi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/paddingVertical"
            android:paddingBottom="@dimen/paddingVertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/olymps_roi"
            android:textAllCaps="false"
            android:textColor="@color/colorForMainText"
            android:textSize="20sp" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>