<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upperGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@+id/upperGuideLine">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/paddingHorizontalLarge"
                android:layout_marginEnd="@dimen/paddingHorizontalLarge"
                android:layout_marginBottom="@dimen/paddingVertical"
                android:fontFamily="sans-serif"
                android:text="@string/enterText"
                android:textAlignment="center"
                android:textColor="@color/colorForMainText"
                android:textSize="28sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/paddingHorizontalLarge"
                android:layout_marginEnd="@dimen/paddingHorizontalLarge"
                android:fontFamily="sans-serif"
                android:hint="@string/usernameInEnter"
                android:textColor="@color/colorForMainText"
                android:textColorHint="@color/secondaryColor"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextHintSize">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_field_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/paddingHorizontalLarge"
                android:layout_marginEnd="@dimen/paddingHorizontalLarge"
                android:fontFamily="sans-serif"
                android:hint="@string/passwordInEnter"
                android:textColor="@color/colorForMainText"
                android:textColorHint="@color/secondaryColor"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/TextHintSize">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/font_normal" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="@dimen/paddingVertical"
        android:elevation="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/loginInEnterScreen"
        android:textAlignment="center"
        android:textColor="@color/colorPopup"
        android:textSize="18sp"
        app:background="@android:color/holo_red_light"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_anchor="@+id/frame_layout"
        app:layout_anchorGravity="bottom|center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>